Finish Edit all links on the website Relates #47

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                         <!-- New Information -->
                         <div class="new-info">
-                            <h3 class="new-title"><a href="#" class="new-link">Amnesty report calls Israel an apartheid state</a></h3>
+                            <h3 class="new-title"><a href="single-new.html" class="new-link">Amnesty report calls Israel an apartheid state</a></h3>
                             <a href="single-new.html" class="new-category">MIDDLE EAST</a>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
 
                         <!-- New Information -->
                         <div class="new-info">
-                            <h3 class="new-title"><a href="#" class="new-link">The millennials choosing friends as sperm donors</a></h3>
+                            <h3 class="new-title"><a href="single-new.html" class="new-link">The millennials choosing friends as sperm donors</a></h3>
                             <a href="single-new.html" class="new-category">WORK LIFE</a>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
 
                         <!-- New Information -->
                         <div class="new-info">
-                            <h3 class="new-title"><a href="#" class="new-link">Ukraine leader praises West's response on Russia</a></h3>
+                            <h3 class="new-title"><a href="single-new.html" class="new-link">Ukraine leader praises West's response on Russia</a></h3>
                             <a href="single-new.html" class="new-category">EUROPE</a>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
 
                         <!-- New Information -->
                         <div class="new-info">
-                            <h3 class="new-title"><a href="#" class="new-link">Ros Atkins on... Sue Gray's report</a></h3>
+                            <h3 class="new-title"><a href="single-new.html" class="new-link">Ros Atkins on... Sue Gray's report</a></h3>
                             <a href="single-new.html" class="new-category">UK POLICIES</a>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
 
                         <!-- New Information -->
                         <div class="new-info">
-                            <h3 class="new-title"><a href="#" class="new-link">How modern food lost its nutrients</a></h3>
+                            <h3 class="new-title"><a href="single-new.html" class="new-link">How modern food lost its nutrients</a></h3>
                             <a href="single-new.html" class="new-category">FOOD</a>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                         </div>
 
                         <div class="sec-btns">
-                           <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
+                            <button class="btn more">VIEW MORE</button>
                         </div>
                     </section>
 
@@ -222,7 +222,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
+                            <button class="btn more">VIEW MORE</button>
                         </div>
                     </section>
 
@@ -277,7 +277,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
+                            <button class="btn more">VIEW MORE</button>
                         </div>
                     </section>
 
@@ -332,7 +332,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
+                            <button class="btn more">VIEW MORE</button>
                         </div>
                     </section>
 
@@ -387,7 +387,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
+                            <button class="btn more">VIEW MORE</button>
                         </div>
                     </section>
 
@@ -443,7 +443,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
+                            <button class="btn more">VIEW MORE</button>
                         </div>
                     </section>
 
