Finish Style Edits of the All Pages Relates #49

--- a/single-new.html
+++ b/single-new.html
@@ -34,7 +34,7 @@
             <div class="container-box">
                 <div class="nav">
                     <div class="logo">
-                        <img src="img/logo.png" alt="logo" />
+                        <a href="index.html"><img src="img/logo.png" alt="logo"></a>
                     </div>
                     <ul class="nav-links show">
                         <li><a href="#">Corona Updates</a></li>
@@ -331,7 +331,6 @@
                         <h3>
                             India & Its Magnetic Charm For Foreign Investments
                         </h3>
-                        <hr />
 
                         <div class="social">
                             <span
@@ -349,7 +348,6 @@
                         <h3>
                             India & Its Magnetic Charm For Foreign Investments
                         </h3>
-                        <hr />
 
                         <div class="social">
                             <span
@@ -367,7 +365,6 @@
                         <h3>
                             India & Its Magnetic Charm For Foreign Investments
                         </h3>
-                        <hr />
 
                         <div class="social">
                             <span
@@ -385,7 +382,6 @@
                         <h3>
                             India & Its Magnetic Charm For Foreign Investments
                         </h3>
-                        <hr />
 
                         <div class="social">
                             <span
