Edit Website Title Relates #54

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/index.css">
 
     <!-- Page Title -->
-    <title>Home</title>
+    <title>NBC NEWS</title>
 </head>
 <body>
     <!-- Start Container -->
