--- a/single-new.html
+++ b/single-new.html
@@ -27,7 +27,7 @@
         <link rel="stylesheet" href="css/single-new.css" />
 
         <!-- Page Title -->
-        <title>detail page</title>
+        <title>NBC NEWS</title>
     </head>
     <body>
         <!-- Start Navigation Bar -->
