Fix the Responsive Relates #55

--- a/single-new.html
+++ b/single-new.html
@@ -397,12 +397,13 @@
             </div>
         </section>
         <!-- End related blog section -->
+        
         <!-- Start Page Footer -->
         <footer class="page-footer">
             <div class="container-box">
                 <div class="footer-box">
                     <div class="logo-copyright">
-                        <img src="img/footerLogo.png" alt="logo" />
+                        <img src="img/footerLogo.png" alt="logo">
                         <p>copyright &copy; 2022 | NBC NEWS</p>
                     </div>
                     <ul class="policy">
@@ -413,42 +414,23 @@
                     </ul>
                     <div class="footer-links">
                         <ul class="page-sections">
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">Coupons</a></li>
+                            <li><a href="single-new.html">About</a></li>
+                            <li><a href="single-new.html">Contact</a></li>
+                            <li><a href="single-new.html">Career</a></li>
+                            <li><a href="single-new.html">Coupons</a></li>
                         </ul>
                         <ul class="social-icons">
-                            <li>
-                                <a href="#"
-                                    ><i class="fas fa-rss fa-2x rss"></i
-                                ></a>
-                            </li>
-                            <li>
-                                <a href="#"
-                                    ><i class="fab fa-twitter fa-2x twitter"></i
-                                ></a>
-                            </li>
-                            <li>
-                                <a href="#"
-                                    ><i
-                                        class="fab fa-reddit-alien fa-2x reddit"
-                                    ></i
-                                ></a>
-                            </li>
-                            <li>
-                                <a href="#"
-                                    ><i
-                                        class="fab fa-facebook fa-2x facebook"
-                                    ></i
-                                ></a>
-                            </li>
+                            <li><a href="single-new.html"><i class="fas fa-rss fa-2x rss"></i></a></li>
+                            <li><a href="single-new.html"><i class="fab fa-twitter fa-2x twitter"></i></a></li>
+                            <li><a href="single-new.html"><i class="fab fa-reddit-alien fa-2x reddit"></i></a></li>
+                            <li><a href="single-new.html"><i class="fab fa-facebook fa-2x facebook"></i></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- End Page Footer -->
+        
         <!-- Calling Js Files -->
         <script src="js/main.js"></script>
     </body>
